Adding members section

--- a/index.html
+++ b/index.html
@@ -227,14 +227,15 @@ https://templatemo.com/tm-535-softy-pinko
     </section>
     <!-- ***** Home Parallax End ***** -->
 
+    
     <!-- ***** Testimonials Start ***** -->
     <section class="section" id="testimonials">
-        <div class="container">
+        <div class="container" id = "blur">
             <!-- ***** Section Title Start ***** -->
             <div class="row">
                 <div class="col-lg-12">
                     <div class="center-heading">
-                        <h2 class="section-title">What do they say?</h2>
+                        <h2 class="section-title">Members of A2</h2>
                     </div>
                 </div>
                 <div class="offset-lg-3 col-lg-6">
@@ -245,19 +246,43 @@ https://templatemo.com/tm-535-softy-pinko
             </div>
             <!-- ***** Section Title End ***** -->
 
-            <div class="row">
+            <div class="row members">
                 <!-- ***** Testimonials Item Start ***** -->
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="team-item">
                         <div class="team-content">
                             <i><img src="assets/images/testimonial-icon.png" alt=""></i>
-                            <p>Proin a neque nisi. Nam ipsum nisi, venenatis ut nulla quis, egestas scelerisque orci. Maecenas a finibus odio.</p>
+                            <p class="contribution">Proin a neque nisi. Nam ipsum nisi, venenatis ut nulla quis, egestas scelerisque orci. Maecenas a finibus odio. 
+                                <span class = "dots">...</span>
+                                <a href="#" class="learn-more" onclick="seeDetails('ali')">Learn More</a>
+                            </p>
                             <div class="user-image">
-                                <img src="http://placehold.it/60x60" alt="">
+                                <img src="assets/images/ali.jpg" alt="Ali Nurdin">
                             </div>
                             <div class="team-info">
-                                <h3 class="user-name">Catherine Soft</h3>
-                                <span>Managing Director</span>
+                                <h3 class="user-name">Ali Nurdin</h3>
+                                <span>191524004</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- ***** Testimonials Item End ***** -->
+
+                <!-- ***** Testimonials Item Start ***** -->
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="team-item">
+                        <div class="team-content">
+                            <i><img src="assets/images/testimonial-icon.png" alt=""></i>
+                            <p class="contribution-1">Proin a neque nisi. Nam ipsum nisi, venenatis ut nulla quis, egestas scelerisque orci. Maecenas a finibus odio. 
+                                <span class = "dots-1">...</span>
+                                <a href="#" class="learn-more-1"  onclick="seeDetails('amalia')">Learn More</a>
+                            </p>
+                            <div class="user-image">
+                                <img src="assets/images/lala.jpg" alt="Amalia Hajarani">
+                            </div>
+                            <div class="team-info">
+                                <h3 class="user-name">Amalia Hajarani</h3>
+                                <span>191524005</span>
                             </div>
                         </div>
                     </div>
@@ -269,13 +294,16 @@ https://templatemo.com/tm-535-softy-pinko
                     <div class="team-item">
                         <div class="team-content">
                             <i><img src="assets/images/testimonial-icon.png" alt=""></i>
-                            <p>Integer molestie aliquam gravida. Nullam nec arcu finibus, imperdiet nulla vitae, placerat nibh. Cras maximus venenatis molestie.</p>
+                            <p class="contribution-2">Proin a neque nisi. Nam ipsum nisi, venenatis ut nulla quis, egestas scelerisque orci. Maecenas a finibus odio. 
+                                <span class = "dots-2">...</span>
+                                <a href="#" class="learn-more-2" onclick="seeDetails('farra')">Learn More</a>
+                            </p>
                             <div class="user-image">
-                                <img src="http://placehold.it/60x60" alt="">
+                                <img src="assets/images/farra.jpg" alt="Farra Jessica">
                             </div>
                             <div class="team-info">
-                                <h3 class="user-name">Kelvin Wood</h3>
-                                <span>Digital Marketer</span>
+                                <h3 class="user-name">Farra Jessica</h3>
+                                <span>191524008</span>
                             </div>
                         </div>
                     </div>
@@ -287,13 +315,16 @@ https://templatemo.com/tm-535-softy-pinko
                     <div class="team-item">
                         <div class="team-content">
                             <i><img src="assets/images/testimonial-icon.png" alt=""></i>
-                            <p>Quisque diam odio, maximus ac consectetur eu, auctor non lorem. Cras quis est non ante ultrices molestie. Ut vehicula et diam at aliquam.</p>
+                            <p class="contribution-3">Proin a neque nisi. Nam ipsum nisi, venenatis ut nulla quis, egestas scelerisque orci. Maecenas a finibus odio. 
+                                <span class = "dots-3">...</span>
+                                <a href="#" class="learn-more-3" onclick="seeDetails('laras')">Learn More</a>
+                            </p>
                             <div class="user-image">
-                                <img src="http://placehold.it/60x60" alt="">
+                                <img src="assets/images/laras.jpg" alt="Laras Rasdiyani">
                             </div>
                             <div class="team-info">
-                                <h3 class="user-name">David Martin</h3>
-                                <span>Website Manager</span>
+                                <h3 class="user-name">Laras Rasdiyani</h3>
+                                <span>191524016</span>
                             </div>
                         </div>
                     </div>
@@ -301,6 +332,31 @@ https://templatemo.com/tm-535-softy-pinko
                 <!-- ***** Testimonials Item End ***** -->
             </div>
         </div>
+
+        <div id="popup-ali">
+            <h2>Ali</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in condimentum ligula. Praesent suscipit, dui nec scelerisque viverra, mauris justo aliquet velit, vitae facilisis sapien mi in neque. Mauris cursus rutrum ipsum, eu pharetra lacus elementum eget. Etiam quis est urna. Ut consequat facilisis egestas. Vivamus pretium laoreet fringilla. Curabitur odio quam, maximus sed ullamcorper sed, lacinia eu ipsum. Quisque condimentum est eget urna ornare bibendum. Nulla tempor odio eu molestie varius. Nullam in interdum ligula. Sed ullamcorper magna in finibus egestas. Mauris auctor dolor eget turpis placerat pretium. Vivamus a arcu aliquet, ornare metus ac, molestie magna. Phasellus vitae justo sapien. Nulla vitae augue dolor. Proin egestas nisl est, id laoreet augue sollicitudin sed.</p>
+            <a href="#" class="learn-more close-button" onclick="seeDetails('ali')">Close</a>
+        </div>
+
+        <div id="popup-amalia">
+            <h2>Amalia</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in condimentum ligula. Praesent suscipit, dui nec scelerisque viverra, mauris justo aliquet velit, vitae facilisis sapien mi in neque. Mauris cursus rutrum ipsum, eu pharetra lacus elementum eget. Etiam quis est urna. Ut consequat facilisis egestas. Vivamus pretium laoreet fringilla. Curabitur odio quam, maximus sed ullamcorper sed, lacinia eu ipsum. Quisque condimentum est eget urna ornare bibendum. Nulla tempor odio eu molestie varius. Nullam in interdum ligula. Sed ullamcorper magna in finibus egestas. Mauris auctor dolor eget turpis placerat pretium. Vivamus a arcu aliquet, ornare metus ac, molestie magna. Phasellus vitae justo sapien. Nulla vitae augue dolor. Proin egestas nisl est, id laoreet augue sollicitudin sed.</p>
+            <a href="#" class="learn-more close-button" onclick="seeDetails('amalia')">Close</a>
+        </div>
+
+        <div id="popup-farra">
+            <h2>Farra</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in condimentum ligula. Praesent suscipit, dui nec scelerisque viverra, mauris justo aliquet velit, vitae facilisis sapien mi in neque. Mauris cursus rutrum ipsum, eu pharetra lacus elementum eget. Etiam quis est urna. Ut consequat facilisis egestas. Vivamus pretium laoreet fringilla. Curabitur odio quam, maximus sed ullamcorper sed, lacinia eu ipsum. Quisque condimentum est eget urna ornare bibendum. Nulla tempor odio eu molestie varius. Nullam in interdum ligula. Sed ullamcorper magna in finibus egestas. Mauris auctor dolor eget turpis placerat pretium. Vivamus a arcu aliquet, ornare metus ac, molestie magna. Phasellus vitae justo sapien. Nulla vitae augue dolor. Proin egestas nisl est, id laoreet augue sollicitudin sed.</p>
+            <a href="#" class="learn-more close-button" onclick="seeDetails('farra')">Close</a>
+        </div>
+
+        <div id="popup-laras">
+            <h2>Laras</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in condimentum ligula. Praesent suscipit, dui nec scelerisque viverra, mauris justo aliquet velit, vitae facilisis sapien mi in neque. Mauris cursus rutrum ipsum, eu pharetra lacus elementum eget. Etiam quis est urna. Ut consequat facilisis egestas. Vivamus pretium laoreet fringilla. Curabitur odio quam, maximus sed ullamcorper sed, lacinia eu ipsum. Quisque condimentum est eget urna ornare bibendum. Nulla tempor odio eu molestie varius. Nullam in interdum ligula. Sed ullamcorper magna in finibus egestas. Mauris auctor dolor eget turpis placerat pretium. Vivamus a arcu aliquet, ornare metus ac, molestie magna. Phasellus vitae justo sapien. Nulla vitae augue dolor. Proin egestas nisl est, id laoreet augue sollicitudin sed.</p>
+            <a href="#" class="learn-more close-button" onclick="seeDetails('laras')">Close</a>
+        </div>
+
     </section>
     <!-- ***** Testimonials End ***** -->
 
@@ -391,78 +447,6 @@ https://templatemo.com/tm-535-softy-pinko
         </div>
     </section>
     <!-- ***** Counter Parallax End ***** -->   
-
-    <!-- ***** Blog Start ***** -->
-    <section class="section" id="blog">
-        <div class="container">
-            <!-- ***** Section Title Start ***** -->
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="center-heading">
-                        <h2 class="section-title">Blog Entries</h2>
-                    </div>
-                </div>
-                <div class="offset-lg-3 col-lg-6">
-                    <div class="center-text">
-                        <p>Integer molestie aliquam gravida. Nullam nec arcu finibus, imperdiet nulla vitae, placerat nibh. Cras maximus venenatis molestie.</p>
-                    </div>
-                </div>
-            </div>
-            <!-- ***** Section Title End ***** -->
-
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="blog-post-thumb">
-                        <div class="img">
-                            <img src="assets/images/blog-item-01.png" alt="">
-                        </div>
-                        <div class="blog-content">
-                            <h3>
-                                <a href="#">Vivamus ac vehicula dui</a>
-                            </h3>
-                            <div class="text">
-                               Cras aliquet ligula dui, vitae fermentum velit tincidunt id. Praesent eu finibus nunc. Nulla in sagittis eros. Aliquam egestas augue.
-                            </div>
-                            <a href="#" class="main-button">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="blog-post-thumb">
-                        <div class="img">
-                            <img src="assets/images/blog-item-02.png" alt="">
-                        </div>
-                        <div class="blog-content">
-                            <h3>
-                                <a href="#">Phasellus convallis augue</a>
-                            </h3>
-                            <div class="text">
-                                Aliquam commodo ornare nisl, et scelerisque nisl dignissim ac. Vestibulum finibus urna ut velit venenatis, vel ultrices sapien mattis.
-                            </div>
-                            <a href="#" class="main-button">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                    <div class="blog-post-thumb">
-                        <div class="img">
-                            <img src="assets/images/blog-item-03.png" alt="">
-                        </div>
-                        <div class="blog-content">
-                            <h3>
-                                <a href="#">Nam gravida purus non</a>
-                            </h3>
-                            <div class="text">
-                                Maecenas eu erat vitae dui convallis consequat vel gravida nulla. Vestibulum finibus euismod odio, ut tempus enim varius eu.
-                            </div>
-                            <a href="#" class="main-button">Read More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- ***** Blog End ***** -->
 
     <!-- ***** Contact Us Start ***** -->
     <section class="section colored" id="contact-us">
@@ -569,6 +553,9 @@ https://templatemo.com/tm-535-softy-pinko
     
     <!-- Global Init -->
     <script src="assets/js/custom.js"></script>
+
+    <!-- Members -->
+    <script src="assets/js/members.js"></script>
 
   </body>
 </html>
