--- a/index.html
+++ b/index.html
@@ -45,16 +45,18 @@ https://templatemo.com/tm-535-softy-pinko
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="#" class="logo">
-							<div class="rectangle-32"></div>
-							<div class="rectangle-33"></div>
+                            <img src="assets/images/logo.png" alt="Softy Pinko"/>
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li><a href="#" class="active">Home</a></li>
-                            <li><a href="#">Requirement</a></li>
-                            <li><a href="#">Interface</a></li>
-                            <li><a href="#">Prototype</a></li>
+                            <li><a href="#welcome" class="active">Home</a></li>
+                            <li><a href="#features">About</a></li>
+                            <li><a href="#work-process">Work Process</a></li>
+                            <li><a href="#testimonials">Testimonials</a></li>
+                            <li><a href="#work-area">Work Area</a></li>
+                            <li><a href="#blog">Blog Entries</a></li>
+                            <li><a href="#contact-us">Contact Us</a></li>
                         </ul>
                         <a class='menu-trigger'>
                             <span>Menu</span>
@@ -412,8 +414,7 @@ https://templatemo.com/tm-535-softy-pinko
     <!-- ***** Work Area End ***** -->
 
     <!-- ***** Counter Parallax Start ***** -->
-    <!--
-	<section class="counter">
+    <section class="counter">
         <div class="content">
             <div class="container">
                 <div class="row">
@@ -448,11 +449,9 @@ https://templatemo.com/tm-535-softy-pinko
     <!-- ***** Counter Parallax End ***** -->   
 
     <!-- ***** Contact Us Start ***** -->
-	<!--
     <section class="section colored" id="contact-us">
         <div class="container">
             <!-- ***** Section Title Start ***** -->
-			<!--
             <div class="row">
                 <div class="col-lg-12">
                     <div class="center-heading">
@@ -466,10 +465,9 @@ https://templatemo.com/tm-535-softy-pinko
                 </div>
             </div>
             <!-- ***** Section Title End ***** -->
-			<!--
+
             <div class="row">
                 <!-- ***** Contact Text Start ***** -->
-				<!--
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <h5 class="margin-bottom-30">Keep in touch</h5>
                     <div class="contact-text">
@@ -479,10 +477,9 @@ https://templatemo.com/tm-535-softy-pinko
                     </div>
                 </div>
                 <!-- ***** Contact Text End ***** -->
-				
+
                 <!-- ***** Contact Form Start ***** -->
-                <!--
-				<div class="col-lg-8 col-md-6 col-sm-12">
+                <div class="col-lg-8 col-md-6 col-sm-12">
                     <div class="contact-form">
                         <form id="contact" action="" method="get">
                           <div class="row">
@@ -511,7 +508,6 @@ https://templatemo.com/tm-535-softy-pinko
                     </div>
                 </div>
                 <!-- ***** Contact Form End ***** -->
-			<!--
             </div>
         </div>
     </section>
@@ -523,18 +519,11 @@ https://templatemo.com/tm-535-softy-pinko
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <ul class="social">
-                        <li><a href="#">Home</a>
-							<ul class="sub-nav">
-								<li>Description</li>
-								<li>Members</li>
-								<li>Links</li>
-								<li>Work Area</li>
-								<li>Contribution</li>
-							</ul>
-						</li>
-                        <li><a href="#">Requirement</a></li>
-                        <li><a href="#">Interface</a></li>
-                        <li><a href="#">Prototype</a></li>
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="#"><i class="fa fa-rss"></i></a></li>
+                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                     </ul>
                 </div>
             </div>
