Add logo, Update footer, and fill in Carrier Oppoinment

--- a/requirement.html
+++ b/requirement.html
@@ -144,22 +144,26 @@
                     <div class="list">
                         <h5>User</h5>
                         <ul>
-                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis imperdiet metus quis eros elementum, non eleifend eros gravida.
-                                Cras volutpat ligula et metus volutpat, et commodo est faucibus.
+                            <li>Shipment Planner 
+                                <br>Liked the UI with a view that doesn't give much distraction to make it easier
+                                to arrange shipping routes and which trackpoints will be visited during shipping.
+                                And liked the simple UI display design with color contrast between windows to make it easier to do two different roles.
                             </li>
-                            <li>Nulla vel ligula sollicitudin, maximus purus id, tempus ante.
-                                <br>blablabla
+                            <li>Junior Supply Officer
+                                <br>Liked the organized UI with contrast between one button and another to differentiate
+                                the work window as it needed to do some work.
                             </li>
                             <span id="more-2-1">
-                                <li>Donec nec mauris condimentum, efficitur magna ac, faucibus ex
-                                    <br>blablabla
+                                <li>Senior Supply Officer
+                                    <br>Liked the UI with a comfortable display for reading large numbers of documents.
+                                    And liked the simple UI display design with color contrast between windows to make it easier to do two different roles.
                                 </li>
-                                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                    <br>blablabla
+                                <li>Warehouse Office
+                                    <br>Liked the UI with a calendar view with the availability of many color choices to provide notes on each date
+                                    the package was picked up to be sent. As well as a display design that makes it easy to see which packages need to come first.
                                 </li>
-                                <li>Nulla consectetur lorem et finibus blandit
-                                    <br>blablabla
+                                <li>Warehouse Admin Officer
+                                    <br>Liked the UI with a simple interface and easy to do progress notification related to other roles.
                                 </li>
                             </span>
 
@@ -169,22 +173,35 @@
                     <div class="list">
                         <h5>Task Description</h5>
                         <ul>
-                            <li>Donec nec mauris condimentum, efficitur magna ac, faucibus ex
-                                <br>blablabla
+                            <li>Create Route Guide and Estimate Trailer Usage
+                                <br>After the Purchase Order is confirmed, the Shipment Planner will create a route guide and trailer usage.
+                                The route guide is a document that contains which trackpoints must be passed when the delivery takes place.
+                                While trailer usage is a document that contains how much trailer needs are needed by estimating the size of the order.
                             </li>
-                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                <br>blablabla
+                            <li>Prepare Transportation Quote
+                                <br>If the Route Guide and Trailer Usage are completed on time by the Shipment Planner, the Junior Supply Officer will
+                                carry out a Prepare Transportation Quote by calculating the shipping costs based on the number of packages sent and
+                                the total volume of fraight shipped. The results of this calculation will be divided into 3 (Single Package, Less than Truckload,
+                                Full Truck-Load).
                             </li>
                             <span id="dots-2-1"></span>
                             <span id="more-2-2">
-                                <li>Nulla consectetur lorem et finibus blandit
-                                    <br>blablabla
+                                <li>Single Package
+                                    <br>If the package sent is as a single package, then the entire process will then be handled by the Junior Supply Officer,
+                                    by making a Motor Carrier Pickup Manifest.
                                 </li>
-                                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                    <br>blablabla
+                                <li>Less than Truckload
+                                    <br>If the package sent is Less than Truckload, then the Warehouse Officer will then make a Pickup and Delivery Appointment.
+                                    After that, Senior Supply Officer will make a Bill of Lading document. If the Warehouse Officer does not make a Delivery Appointment,
+                                    the Delivery Appointment will be made by the Junior Supply Officer.
                                 </li>
-                                <li>Nulla vel ligula sollicitudin, maximus purus id, tempus ante.
-                                    <br>blablabla
+                                <li>Full Truck-Load
+                                    <br>If the package sent is Full Truck-Load, the Delivery Appointment and Pickup Appointment can be made by the Client Liaison or
+                                    Warehouse Officer & Junior Supply Officer. Then, the Senior Supply Officer will create a Shipment Information Document.
+                                </li>
+                                <li>Produce Shipment Notice
+                                    <br>This Shipment Notice will only be made if the delivery category is less than truckload and full truckload.
+                                    Shipment Notice is made by the Warehouse Admin Officer.
                                 </li>
                             </span>
                         </ul>
@@ -192,7 +209,7 @@
                     </div>
 
                     <h5 class="hta-text">HTA</h5>
-                    <img id="hta-2" src="assets/images/dummy-hta.png" onclick="enlargeImage('target-2', 'hta-2', 'large-hta-2')">
+                    <img id="hta-2" src="assets/images/tasks/hta-carrier-appoinment.png" onclick="enlargeImage('target-2', 'hta-2', 'large-hta-2')">
 
                     <!-- The Modal -->
                     <div id="target-2" class="modal">
@@ -426,12 +443,14 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <ul class="link">
-                            <li><a href="#welcome"><i class="fa fa-home"></i></a>
+                            <li><a href="index.html"><i class="fa fa-home"></i></a>
                                 <p style="font-size: 20px; color: #ff589e; margin-bottom: 8px;">Home</p>
                                 <ul class="sub-nav" style="font-size: 15px; color: white;">
                                     <li>Description</li><br>
                                     <li>Members</li><br>
-                                    <li>Work Area</li>
+                                    <li>Work Area</li><br>
+                                    <li></li><br>
+                                    <li></li><br>
                                 </ul>
                             </li>
                             <li><a href="requirement.html"><i class="fa fa-user"></i></a>
@@ -449,7 +468,9 @@
                                 <ul class="sub-nav" style="font-size: 15px; color: white;">
                                     <li>Section 1</li><br>
                                     <li>Section 2</li><br>
-                                    <li>Section 3</li>
+                                    <li>Section 3</li><br>
+                                    <li></li><br>
+                                    <li></li><br>
                                 </ul>
                             </li>
                             <li><a href="#prototype"><i class="fa fa-file-o"></i></a>
@@ -457,7 +478,9 @@
                                 <ul class="sub-nav" style="font-size: 15px; color: white;">
                                     <li>Section 1</li><br>
                                     <li>Section 2</li><br>
-                                    <li>Section 3</li>
+                                    <li>Section 3</li><br>
+                                    <li></li><br>
+                                    <li></li><br>
                                 </ul>
                             </li>
                         </ul>
