--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li><a href="#welcome" class="active">Home</a></li>
+                            <li><a href="index.html" class="active">Home</a></li>
                             <li><a href="requirement.html">Requirement</a></li>
                             <li><a href="#interface">Interface</a></li>
                             <li><a href="#prototype">Prototype</a></li>
@@ -268,19 +268,19 @@
         <!-- Full-width images with number and caption text -->
         <div class="mySlides-fade">
             <div class="numbertext">1 / 3</div>
-            <img src="assets/images/workArea/FirstMeet.jpg" style="width:100%">
+            <img src="assets/images/workArea/FirstMeet.png" style="width:100%">
             <div class="text">First Discussion</div>
         </div>
 
         <div class="mySlides-fade">
             <div class="numbertext">2 / 3</div>
-            <img src="assets/images/workArea/SecondMeet.jpg" style="width:100%">
+            <img src="assets/images/workArea/SecondMeet.png" style="width:100%">
             <div class="text">Second Discussion</div>
         </div>
 
         <div class="mySlides-fade">
             <div class="numbertext">3 / 3</div>
-            <img src="assets/images/workArea/SecondMeet.jpg" style="width:100%">
+            <img src="assets/images/workArea/ThirdMeet.png" style="width:100%">
             <div class="text">Third Discussion</div>
         </div>
 
@@ -305,12 +305,14 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <ul class="link">
-                        <li><a href="#welcome"><i class="fa fa-home"></i></a>
+                        <li><a href="index.html"><i class="fa fa-home"></i></a>
                             <p style="font-size: 20px; color: #ff589e; margin-bottom: 8px;">Home</p>
                             <ul class="sub-nav" style="font-size: 15px; color: white;">
 								<li>Description</li><br>
 								<li>Members</li><br>
-								<li>Work Area</li>
+								<li>Work Area</li><br>
+                                <li></li><br>
+                                <li></li><br>
 							</ul>
                         </li>
                         <li><a href="requirement.html"><i class="fa fa-user"></i></a>
@@ -328,7 +330,9 @@
                             <ul class="sub-nav" style="font-size: 15px; color: white;">
 								<li>Section 1</li><br>
 								<li>Section 2</li><br>
-								<li>Section 3</li>
+								<li>Section 3</li><br>
+                                <li></li><br>
+                                <li></li><br>
 							</ul>
                         </li>
                         <li><a href="#prototype"><i class="fa fa-file-o"></i></a>
@@ -336,7 +340,9 @@
                             <ul class="sub-nav" style="font-size: 15px; color: white;">
 								<li>Section 1</li><br>
 								<li>Section 2</li><br>
-								<li>Section 3</li>
+								<li>Section 3</li><br>
+                                <li></li><br>
+                                <li></li><br>
 							</ul>
                         </li>
                     </ul>
